# crypto-app

./: pyproject.toml
crypto-app/: app.py  crypt_utils.py
